# ChangeLog for net-mail/mailbase
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/mailbase/ChangeLog,v 1.73 2007/06/17 19:41:28 ferdy Exp $

  17 Jun 2007; Fernando J. Pereda <ferdy@gentoo.org> mailbase-1.ebuild:
  Don't mix ewarn and echo as per bug #182348

  08 Feb 2007; Fabian Groffen <grobian@gentoo.org> mailbase-0.00-r6.ebuild,
  mailbase-1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  06 Jan 2007; Timothy Redaelli <drizzt@gentoo.org> mailbase-1.ebuild:
  Added stat for BSD wrt bug #153869, acknowledged by Fernando J. Pereda

  06 Jan 2007; Fernando J. Pereda <ferdy@gentoo.org>
  -mailbase-0.00-r4.ebuild, -mailbase-0.00-r5.ebuild,
  -mailbase-0.00-r7.ebuild, -mailbase-0.00-r8.ebuild,
  -mailbase-0.00-r9.ebuild:
  QA: Clean unused versions.

  17 Oct 2006; Roy Marples <uberlord@gentoo.org> mailbase-1.ebuild:
  Added ~sparc-fbsd keyword.

  03 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> mailbase-1.ebuild:
  Add ~x86-fbsd keyword.

  25 Aug 2005; Aron Griffis <agriffis@gentoo.org> mailbase-1.ebuild:
  stable on ia64

  19 Aug 2005; Michael Hanselmann <hansmi@gentoo.org> mailbase-1.ebuild:
  Stable on ppc.

  09 Aug 2005; Aaron Walker <ka0ttic@gentoo.org> mailbase-1.ebuild:
  Stable on mips.

  09 Aug 2005; Diego Pettenò <flameeyes@gentoo.org> mailbase-1.ebuild:
  Stable on amd64.

  08 Aug 2005; Markus Rothe <corsair@gentoo.org> mailbase-1.ebuild:
  Stable on ppc64

  03 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org> mailbase-1.ebuild:
  Stable on sparc

  03 Aug 2005; Fernando J. Pereda <ferdy@gentoo.org> mailbase-1.ebuild:
  stable on x86 and alpha

  29 Jul 2005; MATSUU Takuto <matsuu@gentoo.org> mailbase-0.00-r9.ebuild:
  stable on sh.

  28 Jun 2005; Joshua Kinard <kumba@gentoo.org> mailbase-0.00-r9.ebuild:
  Marked stable on mips.

  18 Jun 2005; Chris Bainbridge <chrb@gentoo.org> Manifest:
  Fix broken manifest.
