@@ -21,14 +21,14 @@ EBUILD mailbase-0.00-r6.ebuild 894 RMD160 96b3119624f302e877a6c22a340f8c01652f85
 MD5 397bfabe8705f3efd96529d314203590 mailbase-0.00-r6.ebuild 894
 RMD160 96b3119624f302e877a6c22a340f8c01652f8567 mailbase-0.00-r6.ebuild 894
 SHA256 15a49316fa12d94373db14521b06a123b7ff6c75299879114852e2e00a1b7c70 mailbase-0.00-r6.ebuild 894
-EBUILD mailbase-1.ebuild 1705 RMD160 34370b023fc64a068507dcdd81971a23c493cc0e SHA1 1177dffc0923b284800edfb4d3e4ddbd334d8fbc SHA256 0af62deb77cf320ee889fc2d570a439e844f112e7f30b2ba350a0e163dcb21bc
-MD5 596f05004c5e029842a0dcb511fee692 mailbase-1.ebuild 1705
-RMD160 34370b023fc64a068507dcdd81971a23c493cc0e mailbase-1.ebuild 1705
-SHA256 0af62deb77cf320ee889fc2d570a439e844f112e7f30b2ba350a0e163dcb21bc mailbase-1.ebuild 1705
-MISC ChangeLog 8441 RMD160 e182159c03308e436a9890232be6062edd3ce1bb SHA1 d89ba749c3b6e687d8e091c14401118c7f0b17a1 SHA256 d683eef13153ccc2b321fc9c1fc6f59cf2ed5c8fa68682103d03c99c425bdf98
-MD5 fbc532af1bc69ba2f6cb8b7efcdc678c ChangeLog 8441
-RMD160 e182159c03308e436a9890232be6062edd3ce1bb ChangeLog 8441
-SHA256 d683eef13153ccc2b321fc9c1fc6f59cf2ed5c8fa68682103d03c99c425bdf98 ChangeLog 8441
+EBUILD mailbase-1.ebuild 1704 RMD160 3f7b706757c4012d2201a0d81a96a4f9d327df8a SHA1 8474d12f85010f5495c54d09f9e87d6af2e152c4 SHA256 a3d7cde680a38b43ba07402681fe62c80c7f86047d1ede62e287348524d47316
+MD5 8264f00393ca9ee3ad2e1f8de10791a5 mailbase-1.ebuild 1704
+RMD160 3f7b706757c4012d2201a0d81a96a4f9d327df8a mailbase-1.ebuild 1704
+SHA256 a3d7cde680a38b43ba07402681fe62c80c7f86047d1ede62e287348524d47316 mailbase-1.ebuild 1704
+MISC ChangeLog 8577 RMD160 40b9a7637ff661a70e4f175d83ef0c9bf304b366 SHA1 a967aa2521c062dc62f4efffac28a6419c6818e4 SHA256 c2d3f73c9cfb22fb9456f5d5d6dc4a950e7c4b687f77400e9fad32e56bb72fbe
+MD5 fe55e72a4bf00bfaeeba842ada7c2ada ChangeLog 8577
+RMD160 40b9a7637ff661a70e4f175d83ef0c9bf304b366 ChangeLog 8577
+SHA256 c2d3f73c9cfb22fb9456f5d5d6dc4a950e7c4b687f77400e9fad32e56bb72fbe ChangeLog 8577
 MISC metadata.xml 161 RMD160 273e570423fa3cd9d3f15f7967a43307c8ee9661 SHA1 a1fecd2f7b169d621b88c6ccab9d758209fc8f19 SHA256 4ebf9a8f60040bfb95f13790c1d146a49c69f791f9c421e02a5d96fd6fcb2b32
 MD5 5721b86fd871bdfab77231abc6e02f68 metadata.xml 161
 RMD160 273e570423fa3cd9d3f15f7967a43307c8ee9661 metadata.xml 161
@@ -40,9 +40,9 @@ MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-mailbase-1 0
 RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-mailbase-1 0
 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-mailbase-1 0
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.6 (GNU/Linux)
+Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFGdY52ViELBEf1JB0RApKbAJ9lxBX1mk+GBgK1WGX36/uRenvd1wCfd6C7
-3pOecrtXYY/YjObGgWKNyOo=
-=u/7b
+iD8DBQFHOqqkp/wUKkr7RBoRAuLYAJ0fIqjfAtSIfgu9aaKxxTnJ45RogQCg1D93
+ygdHRW2SSzI141U2zhUgSTc=
+=Su7R
 -----END PGP SIGNATURE-----
