@@ -1,6 +1,9 @@
 # ChangeLog for net-mail/mailbase
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/mailbase/ChangeLog,v 1.73 2007/06/17 19:41:28 ferdy Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-mail/mailbase/ChangeLog,v 1.74 2007/11/14 07:57:49 vapier Exp $
+
+  14 Nov 2007; Mike Frysinger <vapier@gentoo.org> mailbase-1.ebuild:
+  Move mail user/group and postmaster user here from baselayout.
 
   17 Jun 2007; Fernando J. Pereda <ferdy@gentoo.org> mailbase-1.ebuild:
   Don't mix ewarn and echo as per bug #182348
